Configure Gradle to use Java preview features